gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__beep.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: Some(Label(10))
len: 7
eol: None
diagnostics: 
-----------------
3..7      BEEP

