gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__call.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: Some(Label(10))
len: 27
eol: None
diagnostics: 
-----------------
3..18     CALL (<NUM: 1340> + (<ID: A> * <NUM: 10>))
20..27    CALL <ID: T%>

