gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__close.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 24
eol: None
diagnostics: 
-----------------
3..14     CLOSE # (<NUM: 2> + <NUM: 1>)
15..24    CLOSE # (<NUM: 2> + <NUM: 1>)

