gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__data2.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: Some(Label(10))
len: 35
eol: None
diagnostics: 
-----------------
3..21     DATA [1], [2  ], []
22..35    DATA "["aA"]", "["bB]"

